--- a/wwasm/ubpf_test.html
+++ b/wwasm/ubpf_test.html
@@ -7,15 +7,99 @@
     </head>
     <body>
         <script>
-            const result = load_runtime();
+            const importObject = {
+                wasi_snapshot_preview1: {
+                    proc_exit: () => {
+                        console.log("proc_exit.\n");
+                    },
+                    fd_close: () => {
+                        console.log("fd_close.\n");
+                    },
+                    fd_seek: () => {
+                        console.log("fd_seek.\n");
+                    },
+                    fd_write: () => {
+                        console.log("fd_write.\n");
+                    },
+                },
+            };
+
+            const result = load_runtime(importObject);
             result.then((result) => {
-                const runtime = result.instance
+                const runtime = result.instance;
                 const memory = runtime.exports.memory.buffer;
-                const a = new Uint8Array(memory, 0, 16);
-                const b = new Uint8Array(memory, 0, 16);
-                a[0] = 0x16;
-                b[0] = 0x36;
-                load_ubpf(runtime, b.byteOffset);
+
+                const program_bytes_loc = malloc(runtime, 40);
+                const program_bytes = new Uint8Array(
+                    memory,
+                    program_bytes_loc,
+                    40,
+                );
+
+                const program_memory_loc = malloc(runtime, 512);
+                const program_memory = new Uint8Array(
+                    memory,
+                    program_memory_loc,
+                    512,
+                );
+
+                program_bytes[0] = 0xb4;
+                program_bytes[1] = 0x00;
+                program_bytes[2] = 0x00;
+                program_bytes[3] = 0x00;
+                program_bytes[4] = 0x00;
+                program_bytes[5] = 0x00;
+                program_bytes[6] = 0x00;
+                program_bytes[7] = 0x00;
+                program_bytes[8] = 0xb4;
+                program_bytes[9] = 0x01;
+                program_bytes[10] = 0x00;
+                program_bytes[11] = 0x00;
+                program_bytes[12] = 0x02;
+                program_bytes[13] = 0x00;
+                program_bytes[14] = 0x00;
+                program_bytes[15] = 0x00;
+                program_bytes[16] = 0x04;
+                program_bytes[17] = 0x00;
+                program_bytes[18] = 0x00;
+                program_bytes[19] = 0x00;
+                program_bytes[20] = 0x01;
+                program_bytes[21] = 0x00;
+                program_bytes[22] = 0x00;
+                program_bytes[23] = 0x00;
+                program_bytes[24] = 0x0c;
+                program_bytes[25] = 0x10;
+                program_bytes[26] = 0x00;
+                program_bytes[27] = 0x00;
+                program_bytes[28] = 0x00;
+                program_bytes[29] = 0x00;
+                program_bytes[30] = 0x00;
+                program_bytes[31] = 0x00;
+                program_bytes[32] = 0x95;
+                program_bytes[33] = 0x00;
+                program_bytes[34] = 0x00;
+                program_bytes[35] = 0x00;
+                program_bytes[36] = 0x00;
+                program_bytes[37] = 0x00;
+                program_bytes[38] = 0x00;
+                program_bytes[39] = 0x00;
+
+                var zero = 0;
+                const vm = create_runtime(runtime);
+                const load_result = load_ubpf(runtime, vm, program_bytes);
+                console.log(`load_result: ${load_result}`);
+                const exec_actual_result = exec_ubpf(
+                    runtime,
+                    vm,
+                    memory,
+                    program_memory.byteOffset,
+                    program_memory.length,
+                );
+                if (exec_actual_result instanceof Error) {
+                    console.log(`ubpf_exec failed: ${exec_actual_result}`);
+                } else {
+                    console.log(`program's result: ${exec_actual_result}`);
+                }
             });
         </script>
     </body>
